--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,9 @@ android {
 }
 dependencies {
 
-    def fragment_version = "1.5.5"
+    def fragment_version = "1.5.6"
+    implementation ("androidx.navigation:navigation-fragment-ktx:2.5.3")
+    implementation ("androidx.navigation:navigation-ui-ktx:2.5.3")
     implementation("androidx.fragment:fragment-ktx:$fragment_version")
     implementation ("androidx.viewpager2:viewpager2:1.0.0")
     implementation ("com.google.android.material:material:1.8.0")
